@@ -6,6 +6,8 @@ http://www.rsnapshot.org/
 VERSION 1.1.4 (??? ?? ??:?? 2004)
 ------------------------------------------------------------------------------
 - Set LC_ALL variable to C in an attempt to fix rmtree() locale issue
+- Grouped some rsync_long_args parameters in single array elements in
+  backup_interval() / @default_rsync_long_args
 
 VERSION 1.1.3 (Apr 06 14:24 2004)
 ------------------------------------------------------------------------------
